kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-domain
spec:
  redirectRegex:
    regex: ^https?://vajbcha.djnd.si/(.*)
    replacement: https://vajbcha.danesjenovdan.si/${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vajbcha
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      vajbcha-redirect-domain@kubernetescrd,
      vajbcha-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vajbcha.djnd.si
        - vajbcha.danesjenovdan.si
      secretName: vajbcha-tls
  rules:
    - host: vajbcha.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vajbcha-nginx
                port:
                  number: 80
    - host: vajbcha.danesjenovdan.si
      http: *http_paths
